# henny

./: .gitignore  Cargo.toml  README.md
henny_backend/: Cargo.toml
henny_backend/src/: main.rs
henny_gtk/: Cargo.toml
henny_gtk/src/: main.rs
res/: 404.html  index.css  index.html  index.js
search/: Cargo.toml
search/src/: lib.rs  tfidf.rs
src/: main.rs
src/backend/: main.rs
src/frontend/: main.rs
src/search/: bm25.rs  lib.rs  tfidf.rs
src/tfidf/: lib.rs
