[package]
name = "henny_gtk4"
version = "0.1.0"
edition = "2024"
 
[dependencies]
gtk4 = "0.11.1"
env_logger = "0.11.9"
log = "0.4.29"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
 
