[package]
name = "search"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
lopdf = { version = "0.39.0", default-features = false }
xml = { version = "1.2.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-stemmers = "1.2.0"
clap = { version = "4.6.0", features = ["derive"] }
rayon = "1.11.0"
fast_html2md = "0.0.58"
lasso = "0.7.3"
